--- a/index.html
+++ b/index.html
@@ -5,11 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./pages/index.css">
+    <title>Куда я поеду</title>
 </head>
 
 <body>
-
+    <div class="page">
+        <section class="intro">
+            <div class="intro__text">
+                <p class="intro__caption">Куда я поеду</p>
+                <h1 class="intro__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
+            </div>
+            <img class="intro__image" alt="Вид из самолёта" src="./images/intro-image.jpeg">
+        </section>
+        <section class="people">
+            <p class="people__caption">Люди</p>
+            <h2 class="people__title">Что говорят и говорили люди о путешествиях</h2>
+            <ul class="people__quotes">
+                <li class="people__quote">
+                    <p class="quote__title">Иван Бунин</p>
+                    <p class="quote__text">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.
+                    </p>
+                </li>
+                <li class="people__quote">
+                    <p class="quote__title">Альбер Камю</p>
+                    <p class="quote__text">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.
+                    </p>
+                </li>
+                <li class="people__quote">
+                    <p class="quote__title">Норвежская пословица</p>
+                    <p class="quote__text">Лишь тот, кто странствует, открывает новые пути.</p>
+                </li>
+                <li class="people__quote">
+                    <p class="quote__title">Мария Захарова</p>
+                    <p class="quote__text">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень рискованное предприятие.
+                    </p>
+                </li>
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
