--- a/index.html
+++ b/index.html
@@ -1,49 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>Куда я поеду</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="page">
+      <header class="header page__header">
+        <nav class="header__menu">
+          <a class="header__link" href="#">Мечты</a>
+          <a class="header__link" href="#">Ожидание</a>
+          <a class="header__link" href="#">Реальность</a>
+        </nav>
+        <a class="header__link" href="#">Пожаловаться</a>
+      </header>
+      <main class="content">
         <section class="intro">
-            <div class="intro__text">
-                <p class="intro__caption">Куда я поеду</p>
-                <h1 class="intro__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
+          <div class="intro__text">
+            <p class="intro__caption">Куда я поеду</p>
+            <h1 class="intro__title">
+              Куда я поеду сразу, как можно будет куда-то поехать
+            </h1>
+          </div>
+          <img
+            class="intro__image"
+            alt="Вид из самолёта"
+            src="./images/intro-image.jpeg"
+          />
+        </section>
+        <section class="places content__places">
+          <article class="place places__place">
+            <img
+              class="place__image"
+              src="./images/places-forest.jpeg"
+              alt="Лес"
+            />
+            <div class="place__text">
+              <h2 class="place__title">Поеду в лес</h2>
+              <div class="place__description">
+                <p class="place__paragraph">
+                  Лес — экологическая система, биоценоз, в которой главной
+                  жизненной формой являются деревья.
+                </p>
+                <p class="place__paragraph">
+                  Лес — составная часть природы, понятие «лес» можно
+                  рассматривать на разных уровнях. В глобальном масштабе — это
+                  часть биосферы, в локальном — это может быть насаждение. Леса
+                  занимают около трети площади суши.
+                </p>
+              </div>
             </div>
-            <img class="intro__image" alt="Вид из самолёта" src="./images/intro-image.jpeg">
+          </article>
+          <article class="place places__place">
+            <img
+              class="place__image place__image_order_1"
+              src="./images/places-mountains.jpeg"
+              alt="Горы"
+            />
+            <div class="place__text">
+              <h2 class="place__title">Поеду в горы</h2>
+              <div class="place__description">
+                <p class="place__paragraph">
+                  Горные системы занимают 64 % поверхности Азии, 36 % — Северной
+                  Америки, 25 % — Европы, 22 % — Южной Америки, 17 % — Австралии
+                  и 3 % — Африки. В целом 24 % земной поверхности приходится на
+                  горы. 10 % всех людей живёт на территории гор. В горах берёт
+                  своё начало большинство рек Земли.
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="place places__place">
+            <img
+              class="place__image"
+              src="./images/places-black-sea.jpeg"
+              alt="Чёрное море"
+            />
+            <div class="place__text">
+              <h2 class="place__title">Поеду на Чёрное море</h2>
+              <div class="place__description">
+                <p class="place__paragraph">
+                  Я уплыву туда, где ни разу я не был, туда, где никто раньше не
+                  был. Никто и никогда раньше не был, я уплыву. Я позову тебя
+                  смотреть на синее небо и пить по капле синее небо, и падать в
+                  это синее небо, я позову.
+                </p>
+                <p class="place__paragraph">
+                  Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на
+                  Чёрное-Чёрное море уеду я. Уеду я на Чёрное-Чёрное море, на
+                  Чёрное-Чёрное море, на Чёрное-Чёрное море.
+                </p>
+                <p class="place__paragraph">Уеду я</p>
+              </div>
+            </div>
+          </article>
         </section>
         <section class="people">
-            <p class="people__caption">Люди</p>
-            <h2 class="people__title">Что говорят и говорили люди о путешествиях</h2>
-            <ul class="people__quotes">
-                <li class="people__quote">
-                    <p class="quote__title">Иван Бунин</p>
-                    <p class="quote__text">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.
-                    </p>
-                </li>
-                <li class="people__quote">
-                    <p class="quote__title">Альбер Камю</p>
-                    <p class="quote__text">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.
-                    </p>
-                </li>
-                <li class="people__quote">
-                    <p class="quote__title">Норвежская пословица</p>
-                    <p class="quote__text">Лишь тот, кто странствует, открывает новые пути.</p>
-                </li>
-                <li class="people__quote">
-                    <p class="quote__title">Мария Захарова</p>
-                    <p class="quote__text">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень рискованное предприятие.
-                    </p>
-                </li>
-            </ul>
+          <p class="people__caption">Люди</p>
+          <h2 class="people__title">
+            Что говорят и говорили люди о путешествиях
+          </h2>
+          <ul class="people__quotes">
+            <li class="people__quote">
+              <p class="quote__title">Иван Бунин</p>
+              <p class="quote__text">
+                Человека делают счастливым три вещи: любовь, интересная работа и
+                возможность путешествовать.
+              </p>
+            </li>
+            <li class="people__quote">
+              <p class="quote__title">Альбер Камю</p>
+              <p class="quote__text">
+                Путешествие как самая великая и серьезная наука помогает нам
+                вновь обрести себя.
+              </p>
+            </li>
+            <li class="people__quote">
+              <p class="quote__title">Норвежская пословица</p>
+              <p class="quote__text">
+                Лишь тот, кто странствует, открывает новые пути.
+              </p>
+            </li>
+            <li class="people__quote">
+              <p class="quote__title">Мария Захарова</p>
+              <p class="quote__text">
+                В принципе зарубежная поездка – это серьезнейшее,
+                ответственнейшее и очень рискованное предприятие.
+              </p>
+            </li>
+          </ul>
         </section>
+      </main>
+      <footer class="footer">
+        <p class="footer__copyright">&copy; 2022</p>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
