--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="page">
       <header class="header page__header">
-        <nav class="header__menu">
+        <nav class="header__navigation">
           <a class="header__link" href="#">Мечты</a>
           <a class="header__link" href="#">Ожидание</a>
           <a class="header__link" href="#">Реальность</a>
